2010-06-24  Jackson Harper  <jackson@ximian.com>

	* dependencyobject.cpp|h: Rename this function so it makes a
	little more sense when being set in managed.
	* xaml.cpp: Renamed the setname function.
	
2010-06-24  Alan McGovern  <amcgovern@novell.com>

	* popup.h:
	* popup.cpp:
	* uielement.h: When a Popup is removed from the visual tree,
	  it needs to hide itself. Fixes drt 699.

2010-06-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp: ProgressiveSource::CheckPendingReads: we can read if the
	entire file has been downloaded, even if the requested range isn't
	available.

2010-06-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network.cpp: Fix possible crash in debug spew.

2010-06-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network.cpp: HttpRequest::Open: don't make uris absolute using the xap
	location when in oob mode, but the source location. Fixes #8001.

2010-06-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network.cpp: Don't send -1 as the offset when writing data, not all
	consumers understands what -1 means.

2010-06-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* debug.h:
	* runtime.cpp|h: Add LOG_OOB support.

	* pal/pal.cpp:
	* pal/gtk/pal-gtk.cpp:
	* pal/gtk/install-dialog.cpp: Add oob debug spew.

2010-06-23  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (MultiScaleImage::ctor): Init n_downloading
	to 0.
	(CanDownloadMoreTiles): Check n_downloading < MAX_DOWNLOADERS
	rather than downloaders->len < MAX_DOWNLOADERS because the
	downloaders array can contain unused downloaders.
	(UpdateIsDownloading): If n_downloaders > 0, then set the property
	to true, else false.
	(DownloadTile): Increment n_downloading.
	(TileFailed): Decrement n_downloading if we give up.
	(TileOpened): Decrement n_downloading.

2010-06-23  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (HandleDzParsed): Iterate over the
	DeepZoomImageTileSource's SubImages using the new accessor